finished level4 and some from level5

--- a/src/component/LandingPage.css
+++ b/src/component/LandingPage.css
@@ -7,8 +7,11 @@
 .card {
   margin: 20px;
   height: auto;
-}
 
+}
+.card-title{
+  text-align: center;
+}
 .content-css {
   text-align: center;
   line-height: 1.5;
